[tool.poetry]
name = "commanderbot-lib"
version = "0.6.0"
description = "A library of utilities for discord.py bots."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot-lib"
homepage = "https://github.com/CommanderBot-Dev/commanderbot-lib"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
colorama = {version = "^0.4.3", optional = true}
colorlog = {version = "^4.2.1", optional = true}
pyyaml = {version = "^5.3.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.extras]
colors = ["colorama", "colorlog"]
yaml = ["pyyaml"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
